update; try out set cover dbs

--- a/conf/mgnify-1000r.protein.gtdb-rs202-cover.conf
+++ b/conf/mgnify-1000r.protein.gtdb-rs202-cover.conf
@@ -4,11 +4,17 @@ sample_info: raw/tmp-1000r-mgnify-genomes-all_metadata.tsv
 data_dir: raw/v1.0
 output_dir: output.mgnify-1000r
 basename: 1000r-mgnify-genomes
+thumper_dir: thumper.gtdb-rs202-cover
+reports_dir: reports.gtdb-rs202-cover
+
+thumper_user_database_info: /home/ntpierce/2021-tax/cover_databases.csv
+threshold_bp: 0
 
 search_databases:
-  - gtdb-rs202
+  - gtdb-rs202-cover
 
 alphabet: protein
-ksizes: [7,8,9,10,11]
+#ksizes: [7,8,9,10,11]
+ksizes: [7,10]
 
 gather_memory: 3000
